Removed reliance on DatatypeConverter for Base64 and byte array printing
javax.xml.bind.DatatypeConverter is not supported by Java 9.
Instead java.util.Base64 or other methods can be used.