@@ -5,7 +5,7 @@ import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 import org.eclipse.californium.core.CoapClient;
 import org.eclipse.californium.core.CoapResponse;
@@ -395,7 +395,7 @@ public class OSCoreClientGroupOSCORE {
     	//Set up private & public keys for sender (not from response but set by client)
     	String sid_private_key_string = groupKeyPair;
     	OneKey sid_private_key;
-       	sid_private_key = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(sid_private_key_string)));
+       	sid_private_key = new OneKey(CBORObject.DecodeFromBytes(Base64.getDecoder().decode(sid_private_key_string)));
 
     	//Now derive the actual context
     	
