@@ -19,7 +19,7 @@ package org.eclipse.californium.oscore;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.UnknownHostException;
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 import java.util.Random;
 
 import org.eclipse.californium.core.CoapResource;
@@ -112,8 +112,8 @@ public class GroupOSCOREReceiver {
 		InstallCryptoProviders.installProvider();
 		
 		//Set sender & receiver keys for countersignatures
-		sid_private_key = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(sid_private_key_string)));
-		rid1_public_key = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(rid1_public_key_string)));
+		sid_private_key = new OneKey(CBORObject.DecodeFromBytes(Base64.getDecoder().decode(sid_private_key_string)));
+		rid1_public_key = new OneKey(CBORObject.DecodeFromBytes(Base64.getDecoder().decode(rid1_public_key_string)));
 		
 		//TODO: Re-enable
 		//Check command line arguments (flag to use different sid and sid key)
@@ -121,7 +121,7 @@ public class GroupOSCOREReceiver {
 			System.out.println("Starting with alternative sid 0x77.");
 			sid = new byte[] { 0x77 };
 			sid_private_key_string = "pQMnAQEgBiFYIBBbjGqMiAGb8MNUWSk0EwuqgAc5nMKsO+hFiEYT1bouI1gge/Yvdn7Rz0xgkR/En9/Mub1HzH6fr0HLZjadXIUIsjk=";
-			sid_private_key = new OneKey(CBORObject.DecodeFromBytes(DatatypeConverter.parseBase64Binary(sid_private_key_string)));
+			sid_private_key = new OneKey(CBORObject.DecodeFromBytes(Base64.getDecoder().decode(sid_private_key_string)));
 		} else {
 			System.out.println("Starting with sid 0x52.");
 		}
